--- a/codigo.css
+++ b/codigo.css
@@ -77,7 +77,7 @@ void showLCD(){
   oled.setCursor(0,0);
   oled.setTextSize(2);
   switch(ppm){
-  case 2: oled.print("lucero esta a\nmenos de 5m");
+  case 2: oled.print("muy malo");
           break;
   case 1: oled.print("aire malo");
            break;
